--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prisma": "^6.2.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
     "url": "^0.11.4",
     "winston": "^3.17.0"
