--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "^6.2.1",
+    "dotenv": "^16.4.7",
     "eslint": "9.19.0",
     "eslint-config-next": "15.1.6",
     "http": "^0.0.1-security",
