--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.7",
     "eslint": "9.19.0",
     "eslint-config-next": "15.1.6",
+    "hls.js": "^1.5.20",
     "http": "^0.0.1-security",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
