--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eslint-config-next": "15.1.6",
     "hls.js": "^1.5.20",
     "http": "^0.0.1-security",
-    "next": "15.1.6",
+    "next": "^15.2.4",
     "next-auth": "^5.0.0-beta.25",
     "prisma": "^6.2.1",
     "react": "19.0.0",
