--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "eslint-config-next": "15.1.6",
     "hls.js": "^1.5.20",
     "http": "^0.0.1-security",
+    "leaflet": "^1.9.4",
     "next": "^15.2.4",
     "next-auth": "^5.0.0-beta.25",
     "prisma": "^6.5.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-leaflet": "^5.0.0",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
     "url": "^0.11.4",
