--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "aktuelt-studio",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "node server.mjs",
@@ -14,7 +15,9 @@
     "@auth/prisma-adapter": "^2.8.0",
     "@prisma/client": "^6.5.0",
     "@types/node": "^22.14.0",
+    "axios": "^1.13.0",
     "canvas-confetti": "^1.9.3",
+    "cheerio": "^1.1.2",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
