--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "http": "^0.0.1-security",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.539.0",
-    "next": "^15.2.4",
+    "next": "15.4.10",
     "next-auth": "^5.0.0-beta.25",
     "prisma": "^6.5.0",
     "react": "19.0.0",
